# alda_ss24

./: README.md
programming0/homework/: CMakeLists.txt  build.sh  dummy.cpp  list.hpp  plot_compares.py  sort  sort.cpp  sort.cpp:Zone.Identifier  testing.hpp  tests  tests.cpp
programming1/homework/: Aufgabe_3_Teil_2.txt  CMakeLists.txt  build.sh  graph.hpp  kruskal.csv  msf  msf.cpp  msf.hpp  testing.hpp  tests  tests.cpp
